--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -7,6 +7,7 @@
         <input type="text" name="name"><br><br>
         <input type="email" name="email"><br><br>
         <input type="submit" value="Submit">
+        <!-- {{ csrf_field() | raw }} -->
     </form>
 
 {% endblock %}
