just need to fix csrf but eloquent works like a charm

--- a/app/views/layout/main.html
+++ b/app/views/layout/main.html
@@ -15,6 +15,7 @@
         <ul>
             <a href="/">Home</a>
             <a href="/greet/world">Greet</a>
+            <a href="/add">Add</a>
         </ul>
     </nav>
     <div class="container">
